[CHORE] - 불필요한 코드 삭제 및 수정

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -716,7 +716,7 @@ a.btn-normal {
   display: inline-block;
 }
 .pagination-container ul li a {
-  color: #999;
+  color: black;
 }
 .pagination-container ul li.disabled {
   pointer-events: none;
