--- a/src/main/resources/static/scss/layout/_pagination.scss
+++ b/src/main/resources/static/scss/layout/_pagination.scss
@@ -16,7 +16,7 @@
             display: inline-block;
 
             a {
-                color: #999;
+                color: black;
             }
         }
 
