--- a/src/main/resources/templates/admin/product/product-form.html
+++ b/src/main/resources/templates/admin/product/product-form.html
@@ -620,7 +620,7 @@
                 if (confirm("이미지를 삭제하시겠습니까?")) {
                     $.ajax({
                         url: "/admin/products/" + productImgId,
-                        type: "patch",
+                        type: "delete",
                         success(res) {
                             alert(res);
                             $(this).siblings(".fake-input").val("상품 이미지 " + $(this).attr("data-index"));
