--- a/src/main/resources/templates/member/userid-lookup-result.html
+++ b/src/main/resources/templates/member/userid-lookup-result.html
@@ -29,7 +29,7 @@
 
                         <div class="btn-box">
                             <button onclick="location.href='/login'">로그인페이지 이동</button>
-                            <button onclick="location.href='/forgot-credentials?type=findPw'">비밀번호 찾기</button>
+                            <button onclick="location.href='/forgot-credentials?action=find-pw'">비밀번호 찾기</button>
                         </div>
                     </div>
                 </div>
