--- a/src/main/resources/templates/order/order-form.html
+++ b/src/main/resources/templates/order/order-form.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <div th:replace="/layouts/default-layout.html :: head"></div>
+    <div th:replace="layouts/default-layout.html :: head"></div>
 
     <style>
         @font-face {
