--- a/src/main/resources/templates/admin/board/notice/notice-update-post.html
+++ b/src/main/resources/templates/admin/board/notice/notice-update-post.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <div th:replace="/layouts/admin-layout.html :: head"></div>
+    <div th:replace="layouts/admin-layout.html :: head"></div>
 </head>
 
 <body>
 <main class="admin-main-area">
-    <div th:replace="/layouts/admin-layout.html :: sidebar(currentMenu='noticeManagement')"></div>
+    <div th:replace="layouts/admin-layout.html :: sidebar(currentMenu='noticeManagement')"></div>
 
     <article class="admin-content-area">
-        <div th:replace="/layouts/admin-layout.html :: nav"></div>
+        <div th:replace="layouts/admin-layout.html :: nav"></div>
 
             <!-- section start -->
             <section class="admin-section-area">
@@ -73,10 +73,10 @@
                 </div>
             </section>
 
-            <div th:replace="/layouts/default-layout.html :: footer"></div>
+            <div th:replace="layouts/default-layout.html :: footer"></div>
         </article>
     </main>
-    <div th:replace="/layouts/default-layout.html :: commonJs"></div>
+    <div th:replace="layouts/default-layout.html :: commonJs"></div>
     <!-- editor -->
     <script src="/node_modules/@ckeditor/ckeditor5-build-classic/build/ckeditor.js"></script>
     <script src="/node_modules/@ckeditor/ckeditor5-build-classic/build/translations/ko.js"></script>
