--- a/src/main/resources/templates/admin/order/order-form.html
+++ b/src/main/resources/templates/admin/order/order-form.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <div th:replace="/layouts/admin-layout.html :: head"></div>
+    <div th:replace="layouts/admin-layout.html :: head"></div>
 </head>
 
 <body>
     <main class="admin-main-area">
-        <div th:replace="/layouts/admin-layout.html :: sidebar(currentMenu='orderManagement')"></div>
+        <div th:replace="layouts/admin-layout.html :: sidebar(currentMenu='orderManagement')"></div>
 
         <article class="admin-content-area">
-            <div th:replace="/layouts/admin-layout.html :: nav"></div>
+            <div th:replace="layouts/admin-layout.html :: nav"></div>
 
             <!-- section start -->
             <section class="admin-section-area">
@@ -332,7 +332,7 @@
                 </div>
             </section>
 
-            <div th:replace="/layouts/admin-layout.html :: footer"></div>
+            <div th:replace="layouts/admin-layout.html :: footer"></div>
         </article>
     </main>
 
@@ -354,7 +354,7 @@
         <input type="hidden" class="hidden-req-input" name="req"> <!-- 배송 메시지 -->
     </form>
 
-    <div th:replace="/layouts/admin-layout.html :: commonJs"></div>
+    <div th:replace="layouts/admin-layout.html :: commonJs"></div>
     <!-- custom js -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script th:inline="javascript">
