--- a/src/main/resources/templates/board/qa/qa-detail.html
+++ b/src/main/resources/templates/board/qa/qa-detail.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <div th:replace="/layouts/default-layout.html :: head"></div>
+    <div th:replace="layouts/default-layout.html :: head"></div>
 </head>
 
 <body>
 <main class="def-main-area">
-    <div th:replace="/layouts/default-layout.html :: sidebar"></div>
+    <div th:replace="layouts/default-layout.html :: sidebar"></div>
 
     <article class="def-content-area">
-        <div th:replace="/layouts/default-layout.html :: nav"></div>
+        <div th:replace="layouts/default-layout.html :: nav"></div>
 
         <!-- section start -->
         <section class="def-section-area">
@@ -170,11 +170,11 @@
             </div>
         </section>
 
-        <div th:replace="/layouts/default-layout.html :: footer"></div>
+        <div th:replace="layouts/default-layout.html :: footer"></div>
     </article>
 </main>
 
-<div th:replace="/layouts/default-layout.html :: commonJs"></div>
+<div th:replace="layouts/default-layout.html :: commonJs"></div>
 <!-- 사용자 JS -->
 <script th:inline="javascript">
     let pw = [[${password}]]; // db에 저장된 게시글 비밀번호
