--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -2,17 +2,17 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <div th:replace="/layouts/default-layout.html :: head"></div>
+    <div th:replace="layouts/default-layout.html :: head"></div>
     <!-- 사용자 JS -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 
 <body>
     <main class="def-main-area">
-        <div th:replace="/layouts/default-layout.html :: sidebar"></div>
+        <div th:replace="layouts/default-layout.html :: sidebar"></div>
 
         <article class="def-content-area">
-            <div th:replace="/layouts/default-layout.html :: nav"></div>
+            <div th:replace="layouts/default-layout.html :: nav"></div>
 
             <!-- section start -->
             <section class="def-section-area">
@@ -73,12 +73,12 @@
                 </div>
             </section>
 
-            <div th:replace="/layouts/default-layout.html :: footer"></div>
+            <div th:replace="layouts/default-layout.html :: footer"></div>
         </article>
     </main>
 </body>
 
-<div th:replace="/layouts/default-layout.html :: commonJs"></div>
+<div th:replace="layouts/default-layout.html :: commonJs"></div>
 <script th:inline="javascript">
 
     // 유효성 검사 통과 유무 변수
