--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -2,15 +2,15 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
-    <div th:replace="/layouts/default-layout.html :: head"></div>
+    <div th:replace="layouts/default-layout.html :: head"></div>
 </head>
 
 <body>
     <main class="def-main-area">
-        <div th:replace="/layouts/default-layout.html :: sidebar"></div>
+        <div th:replace="layouts/default-layout.html :: sidebar"></div>
 
         <article class="def-content-area">
-            <div th:replace="/layouts/default-layout.html :: nav"></div>
+            <div th:replace="layouts/default-layout.html :: nav"></div>
 
             <!-- section start -->
             <section class="def-section-area">
@@ -105,9 +105,9 @@
                 </div>
             </section>
 
-            <div th:replace="/layouts/default-layout.html :: footer"></div>
+            <div th:replace="layouts/default-layout.html :: footer"></div>
         </article>
     </main>
 
-    <div th:replace="/layouts/default-layout.html :: commonJs"></div>
+    <div th:replace="layouts/default-layout.html :: commonJs"></div>
 </body>
