[FIX] - 햄버거 버튼 체크박스 상태 토글 문제 해결

--- a/src/main/resources/templates/layouts/admin-layout.html
+++ b/src/main/resources/templates/layouts/admin-layout.html
@@ -158,9 +158,13 @@
             <!-- sidebar toggle 기능 -->
             let toggleBtn = $('.menu-toggle');
             let sidebar = $('.admin-sidebar-area');
+            let checkbox = $('#hamburger');
             toggleBtn.click(function (e) {
                 e.preventDefault();
                 sidebar.toggleClass("active");
+
+                // 체크박스의 상태를 토글
+                checkbox.prop('checked', !checkbox.prop('checked'));
             });
 
             <!--프로필 toggle 기능-->
