--- a/src/main/resources/templates/layouts/default-layout.html
+++ b/src/main/resources/templates/layouts/default-layout.html
@@ -258,9 +258,14 @@
             /* sidebar toggle 기능 */
             let toggleBtn = $('.menu-toggle');
             let sidebar = $('.def-sidebar-area');
+            let checkbox = $('#hamburger');
+
             toggleBtn.click(function (e) {
                 e.preventDefault();
                 sidebar.toggleClass("active");
+
+                // 체크박스의 상태를 토글
+                checkbox.prop('checked', !checkbox.prop('checked'));
             })
 
             $(".footer-header-link").on("click", function () {
