--- a/src/main/resources/templates/order/order-form.html
+++ b/src/main/resources/templates/order/order-form.html
@@ -515,7 +515,7 @@
         <input name="repProductImage" type="hidden">
     </form>
 
-    <div th:replace="/layouts/default-layout.html :: commonJs"></div>
+    <div th:replace="layouts/default-layout.html :: commonJs"></div>
 
     <!-- 사용자 JS -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
