--- a/src/main/resources/templates/board/qa/qa-secret-post-verification.html
+++ b/src/main/resources/templates/board/qa/qa-secret-post-verification.html
@@ -53,7 +53,7 @@
         <input class="hiddenPw" type="hidden" name="password">
     </form>
 
-    <div th:replace="/layouts/default-layout.html :: commonJs"></div>
+    <div th:replace="layouts/default-layout.html :: commonJs"></div>
     <!-- 사용자 JS -->
     <script th:inline="javascript">
         $(function(){
