--- a/src/main/resources/templates/main/product/product-detail.html
+++ b/src/main/resources/templates/main/product/product-detail.html
@@ -366,16 +366,18 @@
             dataType: "text",
             data: JSON.stringify(cartProductListDTO),
             success: function (res) {
-                alert(res);
-                location.href = '/cart';
+                if (res.includes("로그인")) {
+                    alert("로그인 후 이용해 주세요.");
+                    // 로그인 페이지로 이동
+                    window.location.href = '/login';
+                } else {
+                    alert(res);
+                    // 장바구니 페이지로 이동
+                    window.location.href = '/cart';
+                }
             },
             error: function (xhr) {
-                if (xhr.status === 200) {
-                    alert('로그인 후 이용해주세요.');
-                    location.href = "/login";
-                } else {
-                    alert(xhr.responseText);
-                }
+                alert(xhr.responseText);
             },
         })
     }
