--- a/src/main/resources/templates/board/qa/qa-detail.html
+++ b/src/main/resources/templates/board/qa/qa-detail.html
@@ -77,7 +77,7 @@
                                             <span class="date" th:text="${#temporals.format(comment.regTime, 'yyyy-MM-dd')}">2024-02-13</span>
                                         </div>
 
-                                        <span class="btn" th:if="${comment.userIdentifier == member.userIdentifier || member.state.name == T(com.windsome.constant.Role).ADMIN.name}">
+                                        <span class="btn" th:if="${comment.userIdentifier == member.userIdentifier || member.role.name == T(com.windsome.constant.Role).ADMIN.name}">
                                         <a href="#" class="show-form-btn" th:data-commentId="${comment.commentId}">수정</a>
                                         <a href="#" class="comment-del-btn" th:data-commentId="${comment.commentId}">삭제</a>
                                     </span>
@@ -101,10 +101,10 @@
 
                                         <div class="comment">
                                             <th:block th:if="${comment.hasPrivate == true}">
-                                                <th:block th:if="${comment.userIdentifier == member.userIdentifier || member.state.name == T(com.windsome.constant.Role).ADMIN.name}">
+                                                <th:block th:if="${comment.userIdentifier == member.userIdentifier || member.role.name == T(com.windsome.constant.Role).ADMIN.name}">
                                                     <i class="xi-lock-o"></i><span th:text="${comment.content}"></span>
                                                 </th:block>
-                                                <th:block th:if="${comment.userIdentifier != member.userIdentifier && member.state.name != T(com.windsome.constant.Role).ADMIN.name}">
+                                                <th:block th:if="${comment.userIdentifier != member.userIdentifier && member.role.name != T(com.windsome.constant.Role).ADMIN.name}">
                                                     <i class="xi-lock-o"></i><span>비밀 댓글입니다.</span>
                                                 </th:block>
                                             </th:block>
